--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   }
 
   .tagline {
-    font-size: clamp(13px, 2vw, 16px);
+    font-size: clamp(13px, 2vw, 32px);
     color: #1d1e1e;
     margin-top: 5px;
   }
@@ -225,18 +225,101 @@
       font-size: 15px;
     }
   }
+
+
+
+  .navigation {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 30px;
+}
+
+button {
+  background: linear-gradient(135deg, var(--accent), var(--accent2));
+  color: white;
+  border: none;
+  padding: 12px 25px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
+button:disabled {
+  background: #555;
+  cursor: not-allowed;
+}
+
+
+.navigation {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 30px;
+}
+
+button {
+  background: linear-gradient(135deg, var(--accent), var(--accent2));
+  color: white;
+  border: none;
+  padding: 12px 25px;
+  font-size: 16px;
+  font-weight: 600;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.question-card {
+  display: none;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.question-card.active {
+  display: flex;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+
+.progress-container {
+  width: 100%;
+  max-width: 700px;
+  background: rgba(255,255,255,0.1);
+  border-radius: 20px;
+  height: 12px;
+  margin-top: 30px;
+  overflow: hidden;
+  box-shadow: inset 0 0 10px rgba(0,0,0,0.4);
+}
+
+.progress-bar {
+  width: 0%;
+  height: 100%;
+  background: linear-gradient(90deg, var(--accent), var(--accent2));
+  transition: width 0.5s ease-in-out;
+}
+
+
 </style>
 </head>
 
 <body>
-<div class="tech-bg"></div>
 
 <header>
   <div class="logo">
     <img src="byteLogo.png" alt="Byte Club Logo" />
   </div>
-  <div class="club-name">Byte Club & T&D Department</div>
-  <div class="tagline">Unlock Hidden Aptitude Potential</div>
+  <div class="club-name">Brainometry - Unlock Hidden Aptitude Potential</div>
+  <div class="tagline">Byte Club & T&D Department</div>
 </header>
 
 <main>
@@ -266,7 +349,8 @@
   </div>
   <div class="question-card">
     <div class="question-number">7.</div>
-    <h4>Why is responsive design essential for modern websites?</h4>
+    <h4>Why is responsive design essential for modern websites? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui consectetur molestias nesciunt ab exercitationem aliquam consequatur perspiciatis ad repellendus rem ipsam tenetur distinctio officiis reiciendis similique ratione dolores, adipisci dolorum.
+    </h4>
   </div>
   <div class="question-card">
     <div class="question-number">8.</div>
@@ -274,8 +358,64 @@
   </div>
 </main>
 
+
+<div class="progress-container">
+  <div class="progress-bar" id="progressBar"></div>
+</div>
+
+
+
+<div class="navigation">
+  <button id="prevBtn" disabled>Previous</button>
+  <button id="nextBtn">Next</button>
+</div>
+
+
 <footer>
   <p>Made with ❤️ by Byte Club</p>
 </footer>
+
+
+
+
+
+
+<script>
+  const questions = document.querySelectorAll('.question-card');
+  const nextBtn = document.getElementById('nextBtn');
+  const prevBtn = document.getElementById('prevBtn');
+  const progressBar = document.getElementById('progressBar');
+  let current = 0;
+
+  function showQuestion(index) {
+  questions.forEach((q, i) => q.classList.toggle('active', i === index));
+
+  prevBtn.disabled = index === 0;
+  nextBtn.disabled = index === questions.length - 1;
+
+  const progress = ((index + 1) / questions.length) * 100;
+  progressBar.style.width = progress + '%';
+}
+
+nextBtn.addEventListener('click', () => {
+  if (current < questions.length - 1) current++;
+  showQuestion(current);
+});
+
+prevBtn.addEventListener('click', () => {
+  if (current > 0) current--;
+  showQuestion(current);
+});
+
+
+// ✅ Ensure the first question is visible when page loads
+document.addEventListener('DOMContentLoaded', () => {
+  showQuestion(0);
+});
+
+
+
+</script>
+
 </body>
 </html>
