--- a/index.html
+++ b/index.html
@@ -325,27 +325,27 @@ button {
 <main>
   <div class="question-card">
     <div class="question-number">1.</div>
-    <h4>What is the main purpose of using APIs in modern web applications?</h4>
+    <h4>What is the main purpose of using APIs in modern web applications? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
   </div>
   <div class="question-card">
     <div class="question-number">2.</div>
-    <h4>Explain the difference between frontend and backend development.</h4>
+    <h4>Explain the difference between frontend and backend development Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?.</h4>
   </div>
   <div class="question-card">
     <div class="question-number">3.</div>
-    <h4>What is the use of React in web development?</h4>
+    <h4>What is the use of React in web development?Lorem ipsum dolor sit amet consectetur adipisicing elit. At est mollitia commodi voluptatibus iure excepturi officiis temporibus ipsam, quasi iusto iste asperiores architecto dolorem id officia corrupti sint nihil doloribus.</h4>
   </div>
   <div class="question-card">
     <div class="question-number">4.</div>
-    <h4>What is the significance of databases in full-stack applications?</h4>
+    <h4>What is the significance of databases in full-stack applications? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
   </div>
   <div class="question-card">
     <div class="question-number">5.</div>
-    <h4>How does Git help developers manage their projects efficiently?</h4>
+    <h4>How does Git help developers manage their projects efficiently? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
   </div>
   <div class="question-card">
     <div class="question-number">6.</div>
-    <h4>What is the role of Node.js in building scalable web apps?</h4>
+    <h4>What is the role of Node.js in building scalable web apps? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
   </div>
   <div class="question-card">
     <div class="question-number">7.</div>
@@ -354,7 +354,7 @@ button {
   </div>
   <div class="question-card">
     <div class="question-number">8.</div>
-    <h4>How do frameworks like Express.js simplify server-side coding?</h4>
+    <h4>How do frameworks like Express.js simplify server-side coding?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt debitis velit, deserunt, magnam ut ullam hic assumenda repellat cum necessitatibus temporibus dicta et aliquid, dolor quae unde! Corrupti, nostrum officiis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
   </div>
 </main>
 
