--- a/index.html
+++ b/index.html
@@ -325,36 +325,36 @@ button {
 <main>
   <div class="question-card">
     <div class="question-number">1.</div>
-    <h4>What is the main purpose of using APIs in modern web applications? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
+    <h4>The frog fell into 30m deep well and tries to get out , it goes 3mts up and fall 2mts everyday. We have to calculate number of days it take to get out.</h4>
   </div>
   <div class="question-card">
     <div class="question-number">2.</div>
-    <h4>Explain the difference between frontend and backend development Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?.</h4>
+    <h4> The police rounded up Jim, Bud and Sam yesterday, because one of them was suspected of having robbed the local bank. The three suspects made the following statements under intensive questioning. Jim: I’m innocent. Bud: I’m innocent. Sam: Bud is guilty. If only one of these statements turns out to be true, who robbed the bank?</h4>
   </div>
   <div class="question-card">
     <div class="question-number">3.</div>
-    <h4>What is the use of React in web development?Lorem ipsum dolor sit amet consectetur adipisicing elit. At est mollitia commodi voluptatibus iure excepturi officiis temporibus ipsam, quasi iusto iste asperiores architecto dolorem id officia corrupti sint nihil doloribus.</h4>
+    <h4>One thief entered a cave where he found a pile of diamonds. At first he thought of taking all. But listening to his conscience he thought of taking only half of them. But while returning he picked up two more from the pile. After that Second thief entered the cave and bagged half of remaining diamonds and picked up two more while returning. Later third thief entered and did the same. Even the fourth thief did the same. When the fifth thief entered he found no diamond in the cave. How many diamonds are there in the cave at first.</h4>
   </div>
   <div class="question-card">
     <div class="question-number">4.</div>
-    <h4>What is the significance of databases in full-stack applications? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
+    <h4>There was a person who smoked a lot. One day he decided to quit his habbit, but he had 10 cigarettes with him. So he started smoking them one by one to finish them. He had the habit of smoking only 3/4th of it and leaving the rest butt. Latter he found out that by joining 4 butts he can form 1 cigarette. So, tell how many cigarettes in all he smoked.</h4>
   </div>
   <div class="question-card">
     <div class="question-number">5.</div>
-    <h4>How does Git help developers manage their projects efficiently? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
+    <h4> For every one hour two trains will start at the same time, one from Bangalore to Madras another from Madras to Bangalore On parallel tracks. All trains run at the same speed and each train will take 4 hours to reach the other station. How many trains, one train will meet during the journey?</h4>
   </div>
   <div class="question-card">
     <div class="question-number">6.</div>
-    <h4>What is the role of Node.js in building scalable web apps? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
+    <h4>A man earns Rs. 20 on the first day and spends Rs. 15 on the next day. He again earns Rs. 20 on the third day and spends Rs. 15 on the fourth day. If he continues to save like this, how soon will he have Rs. 60 in hand?</h4>
   </div>
   <div class="question-card">
     <div class="question-number">7.</div>
-    <h4>Why is responsive design essential for modern websites? Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui consectetur molestias nesciunt ab exercitationem aliquam consequatur perspiciatis ad repellendus rem ipsam tenetur distinctio officiis reiciendis similique ratione dolores, adipisci dolorum.
+    <h4>One day your friend is visiting, and she presents you with the numbers 2, 3, 4 and 5, and the symbols = and +, and the following tantalizing challenge: It is possible to use each number and symbol once and only once and end up with a true equation; further, you cannot use any number or symbol not given. How can you do this?
     </h4>
   </div>
   <div class="question-card">
     <div class="question-number">8.</div>
-    <h4>How do frameworks like Express.js simplify server-side coding?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt debitis velit, deserunt, magnam ut ullam hic assumenda repellat cum necessitatibus temporibus dicta et aliquid, dolor quae unde! Corrupti, nostrum officiis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus, ad fuga non rerum illum nesciunt dolore sapiente, sint similique dolorem nostrum dolor consectetur deserunt ducimus quidem quae perspiciatis. Porro, tempore?</h4>
+    <h4>There is a special kind of bacteria that gets doubled every minute. One bacteria was put in a jar at 11 am in a jar. It was found that the jar was completely full at 12 noon. At what time the jar was 3/4th empty?</h4>
   </div>
 </main>
 
